test/log/store/vsstcb5_v_u64_m.txt
vsstcb5_v_u64_m.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsstcb5_v_u64_m.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsstcb5_v_u64_m.c:20:40: warning: backslash and newline separated by space
   20 |  #define data_init(a, b, n, threshold) \
      |                                         
vsstcb5_v_u64_m.c:21:35: warning: backslash and newline separated by space
   21 |      for(int i = 0; i < n; i++) { \
      |                                    
vsstcb5_v_u64_m.c:22:40: warning: backslash and newline separated by space
   22 |              a[i] = random(threshold); \
      |                                         
vsstcb5_v_u64_m.c:23:27: warning: backslash and newline separated by space
   23 |              b[i] = a[i]; \
      |                            
vsstcb5_v_u64_m.c:29:6: warning: no previous prototype for 'vsstcb5_v_u64_m_golden' [-Wmissing-prototypes]
   29 | void vsstcb5_v_u64_m_golden(bool8_t mask,uint64_t base[],uint64_t *value,void *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vsstcb5_v_u64_m.c: In function 'vsstcb5_v_u64_m_golden':
vsstcb5_v_u64_m.c:31:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   31 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vsstcb5_v_u64_m.c:31:1: note: each undeclared identifier is reported only once for each function it appears in
vsstcb5_v_u64_m.c:31:9: error: expected ';' before 'Line'
   31 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vsstcb5_v_u64_m.c:29:37: warning: unused parameter 'mask' [-Wunused-parameter]
   29 | void vsstcb5_v_u64_m_golden(bool8_t mask,uint64_t base[],uint64_t *value,void *exp_result) {
      |                             ~~~~~~~~^~~~
vsstcb5_v_u64_m.c:29:51: warning: unused parameter 'base' [-Wunused-parameter]
   29 | void vsstcb5_v_u64_m_golden(bool8_t mask,uint64_t base[],uint64_t *value,void *exp_result) {
      |                                          ~~~~~~~~~^~~~~~
vsstcb5_v_u64_m.c:29:68: warning: unused parameter 'value' [-Wunused-parameter]
   29 | void vsstcb5_v_u64_m_golden(bool8_t mask,uint64_t base[],uint64_t *value,void *exp_result) {
      |                                                          ~~~~~~~~~~^~~~~
vsstcb5_v_u64_m.c:29:80: warning: unused parameter 'exp_result' [-Wunused-parameter]
   29 | void vsstcb5_v_u64_m_golden(bool8_t mask,uint64_t base[],uint64_t *value,void *exp_result) {
      |                                                                          ~~~~~~^~~~~~~~~~
vsstcb5_v_u64_m.c: In function 'main':
vsstcb5_v_u64_m.c:45:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   45 |     data_init_bool(mask, exp_mask, 8, 0xffffffffffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vsstcb5_v_u64_m.c:22:15: error: subscripted value is neither array nor pointer nor vector
   22 |              a[i] = random(threshold); \
      |               ^
vsstcb5_v_u64_m.c:47:5: note: in expansion of macro 'data_init'
   47 |     data_init(value, exp_value, 8*5, 0xffffffffffffffff);
      |     ^~~~~~~~~
vsstcb5_v_u64_m.c:23:22: error: subscripted value is neither array nor pointer nor vector
   23 |              b[i] = a[i]; \
      |                      ^
vsstcb5_v_u64_m.c:47:5: note: in expansion of macro 'data_init'
   47 |     data_init(value, exp_value, 8*5, 0xffffffffffffffff);
      |     ^~~~~~~~~
vsstcb5_v_u64_m.c:56:56: error: 'exp_result' undeclared (first use in this function)
   56 |     vsstcb5_v_u64_m_golden(exp_mask,exp_base,exp_value,exp_result);
      |                                                        ^~~~~~~~~~
vsstcb5_v_u64_m.c:56:28: error: incompatible type for argument 1 of 'vsstcb5_v_u64_m_golden'
   56 |     vsstcb5_v_u64_m_golden(exp_mask,exp_base,exp_value,exp_result);
      |                            ^~~~~~~~
      |                            |
      |                            uint64_t * {aka long long unsigned int *}
vsstcb5_v_u64_m.c:29:37: note: expected 'bool8_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   29 | void vsstcb5_v_u64_m_golden(bool8_t mask,uint64_t base[],uint64_t *value,void *exp_result) {
      |                             ~~~~~~~~^~~~
vsstcb5_v_u64_m.c:59:31: error: incompatible type for argument 3 of 'vsstcb5_v_u64_m'
   59 |     vsstcb5_v_u64_m(mask,base,value);
      |                               ^~~~~
      |                               |
      |                               uint64x8x5_t
In file included from vsstcb5_v_u64_m.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:911:1: note: expected 'int64x8_t' but argument is of type 'uint64x8x5_t'
  911 | __RUGRATS_SCATTER_STORE (u, uint, 64, 8)
      | ^~~~~~~~~~~~~~~~~~~~~~~
vsstcb5_v_u64_m.c:59:5: error: too few arguments to function 'vsstcb5_v_u64_m'
   59 |     vsstcb5_v_u64_m(mask,base,value);
      |     ^~~~~~~~~~~~~~~
In file included from vsstcb5_v_u64_m.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:911:1: note: declared here
  911 | __RUGRATS_SCATTER_STORE (u, uint, 64, 8)
      | ^~~~~~~~~~~~~~~~~~~~~~~
vsstcb5_v_u64_m.c:62:9: error: 'i' undeclared (first use in this function)
   62 |     for(i=0;i<ELE_NUM*COMBO_NUM;i++) {
      |         ^
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb5_v_u64_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsstcb5_v_u64_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsstcb5_v_u64_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb5_v_u64_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed